--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "ext-curl": "*",
         "ext-json": "*",
         "illuminate/support": "~5|~6|~7",
-        "guzzlehttp/guzzle": "~7"
+        "guzzlehttp/guzzle": "~6|~7"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0",
