--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
         "guzzlehttp/guzzle": "~6|~7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.0",
+        "phpunit/phpunit": "^9",
         "mockery/mockery": "^1.1",
-        "orchestra/testbench": "~3|~4",
+        "orchestra/testbench": "~3|~4|~5|~6",
         "sempro/phpunit-pretty-print": "^1.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
