--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
     "require": {
         "ext-curl": "*",
         "ext-json": "*",
-        "illuminate/support": "~5|~6|~7",
-        "guzzlehttp/guzzle": "~6|~7"
+        "illuminate/support": "^6.0|^7.0",
+        "guzzlehttp/guzzle": "^6.0|^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
         "mockery/mockery": "^1.1",
-        "orchestra/testbench": "~3|~4|~5|~6",
+        "orchestra/testbench": "^5.0|^6.0",
         "sempro/phpunit-pretty-print": "^1.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
