--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "guzzlehttp/guzzle": "^6.0|^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9",
+        "phpunit/phpunit": "^8|^9",
         "mockery/mockery": "^1.1",
         "orchestra/testbench": "^5.0|^6.0",
         "sempro/phpunit-pretty-print": "^1.0",
