--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ cache:
     - $HOME/.composer/cache
 
 before_script:
-  - composer self-update
-  - composer install --prefer-source --no-interaction
+  - travis_retry composer self-update
+  - travis_retry composer install --prefer-source --no-interaction
 
 script:
   - vendor/bin/phpcs
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
