--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ cache:
     - $HOME/.composer/cache
 
 before_script:
+  - phpenv config-add travis.php.ini
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source --no-interaction
 
