--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": ">=7.3",
         "ext-curl": "*",
         "ext-json": "*",
+        "doctrine/dbal": "^2.6|^3.1",
         "illuminate/support": "^6.0|^7.0|^8.0",
         "guzzlehttp/guzzle": "^6.0|^7.0"
     },
