--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "ext-curl": "*",
         "ext-json": "*",
         "doctrine/dbal": "^2.6|^3.1",
-        "illuminate/support": "^6.0|^7.0|^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0",
         "guzzlehttp/guzzle": "^6.0|^7.0"
     },
     "require-dev": {
