--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,15 @@
         "php": ">=7.3",
         "ext-curl": "*",
         "ext-json": "*",
-        "doctrine/dbal": "^2.6|^3.1",
-        "illuminate/support": "^6.0|^7.0|^8.0|^9.0",
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0",
         "guzzlehttp/guzzle": "^6.0|^7.0"
     },
     "require-dev": {
+        "doctrine/dbal": "^2.6|^3.1",
         "phpunit/phpunit": "^9",
         "mockery/mockery": "^1.1",
-        "orchestra/testbench": "^5.0|^6.0",
-        "sempro/phpunit-pretty-print": "^1.0",
+        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0",
+        "phpunit/php-code-coverage": "^7.0|^8.0|^9.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
     "autoload": {
