--- a/composer.json
+++ b/composer.json
@@ -14,16 +14,16 @@
         "php": ">=7.3",
         "ext-curl": "*",
         "ext-json": "*",
-        "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0",
+        "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
         "guzzlehttp/guzzle": "^6.0|^7.0"
     },
     "require-dev": {
         "doctrine/dbal": "^2.6|^3.1",
-        "phpunit/phpunit": "^9",
+        "phpunit/phpunit": "^10.0|^11.0",
         "mockery/mockery": "^1.1",
-        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0",
-        "phpunit/php-code-coverage": "^7.0|^8.0|^9.0",
-        "squizlabs/php_codesniffer": "^3.5"
+        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0|^9.0",
+        "phpunit/php-code-coverage": "^7.0|^8.0|^9.0|^10.0|^11.0",
+        "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
         "files": [
