--- a/composer.json
+++ b/composer.json
@@ -11,18 +11,18 @@
     "homepage": "https://github.com/sebastienheyd/boilerplate-packager",
     "keywords": ["laravel","boilerplate","packager"],
     "require": {
-        "php": ">=7.3",
+        "php": ">=8.1",
         "ext-curl": "*",
         "ext-json": "*",
-        "illuminate/support": "^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
+        "illuminate/support": "^10.0|^11.0",
         "guzzlehttp/guzzle": "^6.0|^7.0"
     },
     "require-dev": {
         "doctrine/dbal": "^2.6|^3.1",
         "phpunit/phpunit": "^10.0|^11.0",
         "mockery/mockery": "^1.1",
-        "orchestra/testbench": "^5.0|^6.0|^7.0|^8.0|^9.0",
-        "phpunit/php-code-coverage": "^7.0|^8.0|^9.0|^10.0|^11.0",
+        "orchestra/testbench": "^8.0|^9.0",
+        "phpunit/php-code-coverage": "^9.0|^10.0|^11.0",
         "squizlabs/php_codesniffer": "^3.0"
     },
     "autoload": {
